# 001_cpp_hello_world_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SETUP-GUIDE.md
.devcontainer/: devcontainer.json
include/: hello.hpp
src/: hello.cpp  main.cpp
tests/: test_hello.cpp
